Changed height to avoid scrollbars

--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
   flex-direction: column;
   min-height: 95vh;
   min-width: 200px;
-  /* height: 100vh;
-  width:100; */
+  height: auto;
+  width:auto;
   color: black;
 }
 
@@ -27,8 +27,8 @@ background-image: linear-gradient(-43deg, #4159d0ea 0%, #C850C079 46%, #fca504c5
 h1 {
   font-size: 5rem;
   margin: 0;
-  margin-top: 2%;
-  margin-bottom: 3%;
+  margin-top: 1%;
+  margin-bottom: 2%;
   text-align: left;
 }
 
@@ -42,7 +42,7 @@ p {
   color: black;
 }
 
-.gradient {
+.gradient-text {
   background: linear-gradient(to left, purple, rgb(203, 94, 0));
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
